--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-        <div id="p1" style="background-color: #FFFFFF; padding: 0 0 50px 0; position: relative;">
+        <div id="p1" style="background-color: #000000; padding: 0 0 50px 0; position: relative;">
 
             <div class="corteLayout" style="height: 503px;">
                 <h1 style="font-family:'RecoletaBold'; font-size: 30px; text-align: center; margin: 380px 0 20px 0; color: #000000;">Bem vindo!</h1>
@@ -39,7 +39,7 @@
                 </div>
             </a>
 
-            <div style="background-color: #E0E0E0; width: 90%; height: 100px; margin-left: 5%; margin-top: 10px; position: relative; border-radius: 15px; color: #ADADAD;">
+            <div style="background-color: #000000; width: 90%; height: 100px; margin-left: 5%; margin-top: 10px; position: relative; border-radius: 15px; color: #ADADAD;">
                 <div style="border: 1px solid #CCCCCC; border-radius:30px; width:40px; height:40px; top: 28px; left: 10px; background-color: transparent; position: absolute;">
                     <h2 style="position: absolute; left: 9.5px; top: -7px; font-family: 'RecoletaBold';">2</h2>
                 </div>
